@@ -22,6 +22,12 @@
 %    also returns the matrix of kriging weights LAMBDA and the matrix of
 %    Lagrange multipliers MU.
 %
+% CALL: [ZP, LAMBDA, MU, K] = stk_predict(MODEL, XI, ZI, XP)
+%
+%    also returns the posterior covariance matrix K at the locations XP (this is
+%    an NP x NP covariance matrix). From a frequentist point of view, K can be
+%    seen as the covariance matrix of the prediction errors.
+%
 % SPECIAL CASE #1
 %
 %    If MODEL has a field 'Kx_cache', XI and XP are expected to be vectors of
@@ -65,8 +71,7 @@
 %    You should  have received a copy  of the GNU  General Public License
 %    along with STK.  If not, see <http://www.gnu.org/licenses/>.
 
-function [zp, lambda, mu] = stk_predict(model, xi, zi, xt)
-
+function [zp, lambda, mu, K] = stk_predict(model, xi, zi, xt)
 stk_narginchk(4, 4);
 
 xi = stk_datastruct(xi);
@@ -116,12 +121,12 @@ block_size = [];
 
 %=== prepare lefthand side of the kriging equation
 
-[Kii,Pi] = stk_make_matcov( model,  xi );
+[Kii,Pi] = stk_make_matcov(model,  xi);
 
-LS = [ [ Kii, Pi                ]; ...
-       [ Pi', zeros(size(Pi,2)) ] ];
+LS = [[ Kii, Pi                ]; ...
+      [ Pi', zeros(size(Pi,2)) ]];
 
-[LS_Q,LS_R] = qr( LS ); % orthogonal-triangular decomposition
+[LS_Q, LS_R] = qr(LS); % orthogonal-triangular decomposition
 
 %=== prepare the output arguments
 
@@ -129,20 +134,22 @@ zp = struct('v',zeros(nt,1));
 compute_prediction = ~isempty(zi.a);
 
 % compute the kriging prediction, or just the variances ?
-if compute_prediction, zp.a = zeros(nt,1); 
-else zp.a = zeros(nt,0); end
+if compute_prediction, zp.a = zeros(nt, 1); 
+else zp.a = zeros(nt, 0); end
 
-return_weights = ( nargout > 1 ); % return kriging weights ?
-if return_weights, lambda = zeros(ni,nt); end
+return_weights = (nargout > 1); % return kriging weights ?
+if return_weights, lambda = zeros(ni, nt); end
 
-return_lm = ( nargout > 2 ); % return Lagrange multipliers ?
-if return_lm, mu = zeros(size(Pi,2),nt); end
-    
+return_lm = (nargout > 2); % return Lagrange multipliers ?
+if return_lm, mu = zeros(size(Pi, 2), nt); end
+
+return_K = (nargout > 3); % return posterior covariance matrix ?
+
 %=== choose nb_blocks & block_size
 
-if isempty( block_size )
+if isempty(block_size)
     MAX_RS_SIZE = 5e6; SIZE_OF_DOUBLE = 8; % in bytes
-    block_size = ceil( MAX_RS_SIZE/(ni*SIZE_OF_DOUBLE) );
+    block_size = ceil(MAX_RS_SIZE / (ni * SIZE_OF_DOUBLE));
 end
 
 if block_size == inf, 
@@ -150,51 +157,55 @@ if block_size == inf,
     nb_blocks = 1;
 else
     % blocks of size approx. block_size
-    nb_blocks = ceil( nt / block_size );
+    nb_blocks = ceil(nt / block_size);
 end
 
-block_size = ceil( nt / nb_blocks );
-
+block_size = ceil(nt / nb_blocks);
 
 %=== MAIN LOOP (over blocks)
 
-linsolve_opt = struct( 'UT', true );
+linsolve_opt = struct('UT', true);
+if return_K, RS = zeros(size(LS, 1), nt); end
 
 for block_num = 1:nb_blocks
     
     % compute the indices for the current block
-    idx_beg = 1 + block_size*(block_num-1);
-    idx_end = min( nt, idx_beg+block_size-1 );
+    idx_beg = 1 + block_size * (block_num - 1);
+    idx_end = min(nt, idx_beg + block_size - 1);
     idx = idx_beg:idx_end;
     
     % extract the block of prediction locations
     if use_indices, xt_block = xt(idx);
-    else xt_block = struct('a',xt.a(idx,:)); end
+    else xt_block = struct('a', xt.a(idx,:)); end
     
     % right-hand side of the kriging equation
-    [Kti,Pt] = stk_make_matcov( model, xt_block, xi );
-    RS = [ Kti Pt ]';
+    [Kti, Pt] = stk_make_matcov(model, xt_block, xi);
+    RS_block = [Kti Pt]';
+    
+    % the full RHS will be required if the posterior covariance matrix is requested
+    if return_K, RS(:, idx) = RS_block; end
     
     % solve the upper-triangular system to get the extended
     % kriging weights vector (weights + Lagrange multipliers)
     if stk_is_octave_in_use(),
-        lambda_mu = LS_R \ ( LS_Q'*RS ); % linsolve is missing in Octave
+        lambda_mu = LS_R \ (LS_Q' * RS_block); % linsolve is missing in Octave
     else        
-        lambda_mu = linsolve( LS_R, LS_Q'*RS, linsolve_opt );
+        lambda_mu = linsolve(LS_R, LS_Q' * RS_block, linsolve_opt);
     end
     
     if return_weights, % extract weights
-        lambda(:,idx) = lambda_mu(1:ni,:); end
+        lambda(:, idx) = lambda_mu(1:ni, :); end
     
     if return_lm, % extracts Lagrange multipliers
-        mu(:,idx) = lambda_mu((ni+1):end,:); end
+        mu(:, idx) = lambda_mu((ni+1):end, :); end
     
     if compute_prediction, % compute the kriging mean
-        zp.a(idx) = lambda_mu(1:ni,:)' * zi.a; end
+        zp.a(idx) = lambda_mu(1:ni, :)' * zi.a; end
     
     % compute kriging variances (STATIONARITY ASSUMED)
-    zp.v(idx) = LS(1,1) - dot(lambda_mu, RS)';
-    
+    % FIXME: remove STATIONARITY ASSUMPTION !!!
+    zp.v(idx) = LS(1,1) - dot(lambda_mu, RS_block)';
+
     b = (zp.v < 0);
     if any(b),        
         zp.v(b) = 0.0;
@@ -208,6 +219,13 @@ for block_num = 1:nb_blocks
     end
 end
 
+% compute posterior covariance matrix (if requested)
+if return_K,
+    K0 = stk_make_matcov(model, xt);
+    K = K0 - [lambda; mu]' * RS_block;
+    K = 0.5 * (K + K');
+end
+        
 if display_waitbar, close(hwb); end
 
 end
@@ -229,21 +247,23 @@ end
 %%% tests %%%
 %%%%%%%%%%%%%
 
-%!shared model, x0, x_obs, z_obs, x_prd, y_prd1, idx_obs, idx_prd
+%!shared n, m, model, x0, x_obs, z_obs, x_prd, y_prd1, idx_obs, idx_prd
 %!
-%! n = 20; % 10 observations + 10 predictions
-%! d = 1;  % dimension of the input space
+%! n = 10;     % number of observations
+%! m = n + 1;  % number of predictions
+%! d = 1;      % dimension of the input space
 %!
-%! x0 = stk_sampling_regulargrid(n, d, [0; pi]);
+%! x0 = stk_sampling_regulargrid(n+m, d, [0; pi]);
 %!
-%! idx_obs = 1:2:n;
-%! idx_prd = 2:2:n;
+%! idx_obs = 2:2:(n+m-1);
+%! idx_prd = 1:2:(n+m);
 %!
 %! x_obs = struct('a', x0.a(idx_obs));
 %! z_obs = stk_feval(@sin, x_obs);
 %! x_prd = struct('a', x0.a(idx_prd));
 %! 
 %! model = stk_model('stk_materncov32_iso');
+%! model.order = 0; % this is currently the default, but better safe than sorry
 
 %!error y_prd1 = stk_predict();
 %!error y_prd1 = stk_predict(model);
@@ -251,7 +271,13 @@ end
 %!error y_prd1 = stk_predict(model, x_obs, z_obs);
 %!test  y_prd1 = stk_predict(model, x_obs, z_obs, x_prd);
 %!error y_prd1 = stk_predict(model, x_obs, z_obs, x_prd, 0);
-%!error y_prd1 = stk_predict(model, x_obs, z_obs, x_prd, 0, 1);
+
+%!test
+%!
+%! [y_prd1, lambda, mu, K] = stk_predict(model, x_obs, z_obs, x_prd); 
+%! assert(isequal(size(lambda), [n m]));
+%! assert(isequal(size(mu), [1 m]));  % ordinary kriging
+%! assert(isequal(size(K), [m m]));
 
 %!test
 %!
